done with forms

--- a/.gitignore
+++ b/.gitignore
@@ -717,3 +717,190 @@ backend/socket_server/node_modules/ws/lib/websocket-server.js
 backend/socket_server/node_modules/ws/lib/websocket.js
 /backend/report_server/node_modules
 /backend/socket_server/node_modules
+frontend/accounts.py
+.gitignore
+frontend/accounts.py
+frontend/__pycache__/account.cpython-38.pyc
+frontend/__pycache__/account.cpython-39.pyc
+frontend/__pycache__/accounts.cpython-38.pyc
+frontend/__pycache__/accounts.cpython-39.pyc
+frontend/__pycache__/base_window.cpython-38.pyc
+frontend/__pycache__/base_window.cpython-39.pyc
+frontend/__pycache__/cats.cpython-38.pyc
+frontend/__pycache__/cats.cpython-39.pyc
+frontend/__pycache__/employ.cpython-38.pyc
+frontend/__pycache__/employ.cpython-39.pyc
+frontend/__pycache__/employs.cpython-38.pyc
+frontend/__pycache__/employs.cpython-39.pyc
+frontend/__pycache__/firm.cpython-38.pyc
+frontend/__pycache__/firm.cpython-39.pyc
+frontend/__pycache__/forms.cpython-38.pyc
+frontend/__pycache__/forms.cpython-39.pyc
+frontend/__pycache__/image_viewer.cpython-38.pyc
+frontend/__pycache__/image_viewer.cpython-39.pyc
+frontend/__pycache__/product.cpython-38.pyc
+frontend/__pycache__/product.cpython-39.pyc
+frontend/__pycache__/products.cpython-38.pyc
+frontend/__pycache__/products.cpython-39.pyc
+frontend/__pycache__/purchase.cpython-38.pyc
+frontend/__pycache__/purchase.cpython-39.pyc
+frontend/__pycache__/style.cpython-38.pyc
+frontend/__pycache__/style.cpython-39.pyc
+frontend/__pycache__/tax.cpython-38.pyc
+frontend/__pycache__/tax.cpython-39.pyc
+frontend/__pycache__/taxes.cpython-38.pyc
+frontend/__pycache__/taxes.cpython-39.pyc
+frontend/__pycache__/users.cpython-38.pyc
+frontend/__pycache__/users.cpython-39.pyc
+node_modules/.bin/mkdirp
+node_modules/.bin/mkdirp.cmd
+node_modules/.bin/mkdirp.ps1
+node_modules/.bin/ncp
+node_modules/.bin/ncp.cmd
+node_modules/.bin/ncp.ps1
+node_modules/.bin/rimraf
+node_modules/.bin/rimraf.cmd
+node_modules/.bin/rimraf.ps1
+node_modules/balanced-match/index.js
+node_modules/balanced-match/LICENSE.md
+node_modules/balanced-match/package.json
+node_modules/balanced-match/README.md
+node_modules/balanced-match/.github/FUNDING.yml
+node_modules/brace-expansion/index.js
+node_modules/brace-expansion/LICENSE
+node_modules/brace-expansion/package.json
+node_modules/brace-expansion/README.md
+node_modules/concat-map/.travis.yml
+node_modules/concat-map/index.js
+node_modules/concat-map/LICENSE
+node_modules/concat-map/package.json
+node_modules/concat-map/README.markdown
+node_modules/concat-map/example/map.js
+node_modules/concat-map/test/map.js
+node_modules/glob/common.js
+node_modules/glob/glob.js
+node_modules/glob/LICENSE
+node_modules/glob/package.json
+node_modules/glob/README.md
+node_modules/glob/sync.js
+node_modules/inflight/inflight.js
+node_modules/inflight/LICENSE
+node_modules/inflight/package.json
+node_modules/inflight/README.md
+node_modules/inherits/inherits_browser.js
+node_modules/inherits/inherits.js
+node_modules/inherits/LICENSE
+node_modules/inherits/package.json
+node_modules/inherits/README.md
+node_modules/minimatch/LICENSE
+node_modules/minimatch/minimatch.js
+node_modules/minimatch/package.json
+node_modules/minimatch/README.md
+node_modules/minimist/.travis.yml
+node_modules/minimist/index.js
+node_modules/minimist/LICENSE
+node_modules/minimist/package.json
+node_modules/minimist/readme.markdown
+node_modules/minimist/example/parse.js
+node_modules/minimist/test/all_bool.js
+node_modules/minimist/test/bool.js
+node_modules/minimist/test/dash.js
+node_modules/minimist/test/default_bool.js
+node_modules/minimist/test/dotted.js
+node_modules/minimist/test/kv_short.js
+node_modules/minimist/test/long.js
+node_modules/minimist/test/num.js
+node_modules/minimist/test/parse_modified.js
+node_modules/minimist/test/parse.js
+node_modules/minimist/test/proto.js
+node_modules/minimist/test/short.js
+node_modules/minimist/test/stop_early.js
+node_modules/minimist/test/unknown.js
+node_modules/minimist/test/whitespace.js
+node_modules/mkdirp/index.js
+node_modules/mkdirp/LICENSE
+node_modules/mkdirp/package.json
+node_modules/mkdirp/readme.markdown
+node_modules/mkdirp/bin/cmd.js
+node_modules/mkdirp/bin/usage.txt
+node_modules/mv/.npmignore
+node_modules/mv/.travis.yml
+node_modules/mv/index.js
+node_modules/mv/LICENSE
+node_modules/mv/package.json
+node_modules/mv/README.md
+node_modules/mv/test/a-file
+node_modules/mv/test/test.js
+node_modules/mv/test/a-folder/another-file
+node_modules/mv/test/a-folder/another-folder/file3
+node_modules/ncp/.npmignore
+node_modules/ncp/.travis.yml
+node_modules/ncp/LICENSE.md
+node_modules/ncp/package.json
+node_modules/ncp/README.md
+node_modules/ncp/bin/ncp
+node_modules/ncp/lib/ncp.js
+node_modules/ncp/test/ncp.js
+node_modules/ncp/test/modified-files/out/a
+node_modules/ncp/test/modified-files/src/a
+node_modules/ncp/test/regular-fixtures/src/a
+node_modules/ncp/test/regular-fixtures/src/b
+node_modules/ncp/test/regular-fixtures/src/c
+node_modules/ncp/test/regular-fixtures/src/d
+node_modules/ncp/test/regular-fixtures/src/e
+node_modules/ncp/test/regular-fixtures/src/f
+node_modules/ncp/test/regular-fixtures/src/sub/a
+node_modules/ncp/test/regular-fixtures/src/sub/b
+node_modules/ncp/test/symlink-fixtures/src/foo
+node_modules/ncp/test/symlink-fixtures/src/dir/bar
+node_modules/once/LICENSE
+node_modules/once/once.js
+node_modules/once/package.json
+node_modules/once/README.md
+node_modules/path-is-absolute/index.js
+node_modules/path-is-absolute/license
+node_modules/path-is-absolute/package.json
+node_modules/path-is-absolute/readme.md
+node_modules/rimraf/bin.js
+node_modules/rimraf/LICENSE
+node_modules/rimraf/package.json
+node_modules/rimraf/README.md
+node_modules/rimraf/rimraf.js
+node_modules/wrappy/LICENSE
+node_modules/wrappy/package.json
+node_modules/wrappy/README.md
+node_modules/wrappy/wrappy.js
+backend/report_server/package-lock.json
+backend/report_server/package.json
+backend/report_server/package-lock.json
+backend/report_server/package.json
+backend/report_server/package-lock.json
+package-lock.json
+backend/report_server/package.json
+backend/report_server/package-lock.json
+backend/report_server/package-lock.json
+backend/report_server/package.json
+frontend/__pycache__/accounts.cpython-38.pyc
+frontend/__pycache__/base_window.cpython-38.pyc
+frontend/__pycache__/base_window.cpython-39.pyc
+frontend/__pycache__/cats.cpython-38.pyc
+frontend/__pycache__/employs.cpython-38.pyc
+frontend/__pycache__/firm.cpython-38.pyc
+frontend/__pycache__/image_viewer.cpython-38.pyc
+frontend/__pycache__/products.cpython-38.pyc
+frontend/__pycache__/style.cpython-38.pyc
+frontend/__pycache__/style.cpython-39.pyc
+frontend/__pycache__/taxes.cpython-38.pyc
+frontend/__pycache__/users.cpython-38.pyc
+frontend/__pycache__/accounts.cpython-38.pyc
+frontend/__pycache__/base_window.cpython-38.pyc
+frontend/__pycache__/base_window.cpython-39.pyc
+frontend/__pycache__/cats.cpython-38.pyc
+frontend/__pycache__/employs.cpython-38.pyc
+frontend/__pycache__/firm.cpython-38.pyc
+frontend/__pycache__/image_viewer.cpython-38.pyc
+frontend/__pycache__/products.cpython-38.pyc
+frontend/__pycache__/style.cpython-38.pyc
+frontend/__pycache__/style.cpython-39.pyc
+frontend/__pycache__/taxes.cpython-38.pyc
+frontend/__pycache__/users.cpython-38.pyc
