--- a/backend/product_server/package.json
+++ b/backend/product_server/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "socket_server",
+  "name": "product_server",
   "version": "1.0.0",
-  "description": "realtime server for serving sales bill data and broadcast database update events",
+  "description": "serves regex for products",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,9 +17,9 @@
   },
   "homepage": "https://github.com/SomanathDevoplers/Hosangadi2.0#readme",
   "dependencies": {
-    "express": "^4.17.1",
+    "express": "^4.17.2",
     "mysql": "^2.18.1",
-    "socket.io": "^4.4.0"
+    "socket.io-client": "^4.4.1"
   },
   "devDependencies": {
     "prettier": "2.5.1"
