--- a/.gitignore
+++ b/.gitignore
@@ -913,3 +913,6 @@ frontend/__pycache__/sales_bill.cpython-38.pyc
 .gitignore
 .gitignore
 frontend/__pycache__/other_classes.cpython-38.pyc
+frontend/__pycache__/root.cpython-38.pyc
+.gitignore
+/backend/printer_server/node_modules
