--- a/backend/report_server/package.json
+++ b/backend/report_server/package.json
@@ -17,7 +17,9 @@
     "multer": "^1.4.3",
     "mv": "^2.1.1",
     "mysql": "^2.18.1",
-    "socket.io-client": "^4.4.0"
+    "pdfkit": "^0.13.0",
+    "socket.io-client": "^4.4.0",
+    "sync-mysql": "^3.0.1"
   },
   "devDependencies": {
     "prettier": "2.5.1"
