--- a/backend/printer_server/package.json
+++ b/backend/printer_server/package.json
@@ -23,6 +23,7 @@
     "jsbarcode": "^3.11.5",
     "pdf-to-printer": "^5.3.0",
     "pdfkit": "^0.13.0",
+    "socket.io-client": "^4.4.1",
     "sync-mysql": "^3.0.1",
     "xlsx": "^0.18.5"
   }
