--- a/backend/socket_server/package.json
+++ b/backend/socket_server/package.json
@@ -21,6 +21,7 @@
     "mysql": "^2.18.1",
     "nanoid": "^3.3.1",
     "socket.io": "^4.4.0",
+    "socket.io-client": "^4.4.1",
     "sync-mysql": "^3.0.1",
     "sync-sql": "^1.0.2"
   },
