--- a/backend/printer_server/package.json
+++ b/backend/printer_server/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "socket_server",
+  "name": "printer_server",
   "version": "1.0.0",
   "description": "",
-  "main": "socketServer1.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,11 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
+    "multer": "^1.4.4",
     "mysql": "^2.18.1",
-    "nanoid": "^3.3.4",
-    "socket.io": "^4.5.0",
+    "pdf-to-printer": "^5.3.0",
+    "pdfkit": "^0.13.0",
+    "process": "^0.11.10",
     "socket.io-client": "^4.5.0",
     "sync-mysql": "^3.0.1",
-    "sync-sql": "^1.0.2"
+    "xlsx": "^0.18.5"
   }
 }
