--- a/backend/product_server/package.json
+++ b/backend/product_server/package.json
@@ -1,27 +1,17 @@
 {
   "name": "product_server",
   "version": "1.0.0",
-  "description": "serves regex for products",
-  "main": "index.js",
+  "description": "",
+  "main": "prodcutServer.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/SomanathDevoplers/Hosangadi2.0.git"
-  },
-  "author": "krishnanandshenoy",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/SomanathDevoplers/Hosangadi2.0/issues"
-  },
-  "homepage": "https://github.com/SomanathDevoplers/Hosangadi2.0#readme",
   "dependencies": {
-    "express": "^4.17.2",
+    "express": "^4.18.1",
     "mysql": "^2.18.1",
-    "socket.io-client": "^4.4.1"
-  },
-  "devDependencies": {
-    "prettier": "2.5.1"
+    "socket.io-client": "^4.5.0"
   }
 }
