--- a/backend/barcode_server/package.json
+++ b/backend/barcode_server/package.json
@@ -1,8 +1,7 @@
 {
   "name": "barcode_server",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "barcodeServer.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,5 +13,6 @@
     "express": "^4.18.1",
     "pdf-to-printer": "^5.3.0",
     "pdfkit": "^0.13.0"
-  }
+  },
+  "description": ""
 }
