--- a/backend/printer_server/package.json
+++ b/backend/printer_server/package.json
@@ -2,7 +2,7 @@
   "name": "printer_server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "printerServer.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,12 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
+    "fs": "^0.0.1-security",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
+    "nanoid": "^3.3.4",
+    "path": "^0.12.7",
     "pdf-to-printer": "^5.3.0",
     "pdfkit": "^0.13.0",
-    "process": "^0.11.10",
-    "socket.io-client": "^4.5.0",
+    "socket.io-client": "^4.5.1",
     "sync-mysql": "^3.0.1",
     "xlsx": "^0.18.5"
   }
