--- a/backend/socket_server/package.json
+++ b/backend/socket_server/package.json
@@ -11,11 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
+    "fs": "^0.0.1-security",
     "mysql": "^2.18.1",
     "nanoid": "^3.3.4",
-    "socket.io": "^4.5.0",
-    "socket.io-client": "^4.5.0",
-    "sync-mysql": "^3.0.1",
-    "sync-sql": "^1.0.2"
+    "path": "^0.12.7",
+    "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.1",
+    "sync-mysql": "^3.0.1"
   }
 }
