--- a/backend/report_server/package.json
+++ b/backend/report_server/package.json
@@ -10,6 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mv": "^2.1.1"
+    "express": "^4.18.1",
+    "fs": "^0.0.1-security",
+    "multer": "^1.4.4",
+    "mv": "^2.1.1",
+    "mysql": "^2.18.1",
+    "nanoid": "^3.3.4",
+    "path": "^0.12.7",
+    "pdfkit": "^0.13.0",
+    "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.1",
+    "sync-mysql": "^3.0.1"
   }
 }
