--- a/backend/socket_server/package.json
+++ b/backend/socket_server/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -18,6 +17,7 @@
     "path": "^0.12.7",
     "socket.io": "^4.5.1",
     "socket.io-client": "^4.5.1",
-    "sync-mysql": "^3.0.1"
+    "sync-mysql": "^3.0.1",
+    "uuid": "^9.0.0"
   }
 }
