--- a/backend/socket_server/package.json
+++ b/backend/socket_server/package.json
@@ -2,7 +2,7 @@
   "name": "socket_server",
   "version": "1.0.0",
   "description": "",
-  "main": "socketServer1.js",
+  "main": "socketServer.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
