--- a/backend/report_server/package.json
+++ b/backend/report_server/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "express": "^4.18.1",
     "fs": "^0.0.1-security",
+    "handlebars": "^4.7.7",
+    "html-to-pdf": "^0.1.11",
     "multer": "^1.4.4",
     "mv": "^2.1.1",
     "mysql": "^2.18.1",
