--- a/backend/product_server/package.json
+++ b/backend/product_server/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "express": "^4.18.1",
     "mysql": "^2.18.1",
-    "socket.io-client": "^4.5.1"
+    "socket.io-client": "^4.5.1",
+    "cors": "^2.8.5"
   },
   "description": ""
 }
